--- a/about.html
+++ b/about.html
@@ -6,8 +6,7 @@ title: About
 <h2>About</h2>
 
 <p>
-:art:&nbsp;Yet another theme for elegant writers with modern flat style
-and beautiful night mode.
+:art:&nbsp; This is about my life in the US.
 </p>
 
 <p>
